# acs-virt

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  flake.nix  program.md  results.tsv
cmake/qemu-targets/: arm64-default.cmake  x64-minimal.cmake
configs/: README.md  axi-bus.toml.md
configs/backends/: axi-bus.toml  axi-console.toml  axi-console.toml.md  blk-soc0.toml  blk-soc1.toml
configs/qemu-vms/: axi-blk.toml  axi-blk.toml.md  axi-bus.toml  soc0.toml  soc1.toml
docs/: axi-bus-protocol.md  axi-mmio-proxy-protocol.md  axi-protocol.md  project-state-and-design.md  qemu-target-toolchains.md  runtime-config.md  runtime-config.schema.json  uio-fabric.md  virt-axi-protocol.md  virtio-chiplet-communication-concept.md
patches/qemu/: 0001-add-x86-64-microvm-minimal-device-config.patch  0001-add-x86-64-microvm-minimal-device-config.patch.md  0001-chiplets-qemu-support.patch  0001-chiplets-qemu-support.patch.md  0002-add-microvm-virtio-mmio-transport-count.patch  0002-add-microvm-virtio-mmio-transport-count.patch.md  0003-add-axi-bus-device.patch  0003-add-axi-bus-device.patch.md  0003-add-axi-device.patch  0003-add-axi-device.patch.md  0003-add-axi-mmio-proxy-device.patch  0003-add-virt-axi-device.patch  0003-add-virt-axi-device.patch.md  0004-export-axi-bus-irqs-with-microvm-acpi.patch  0004-export-axi-bus-irqs-with-microvm-acpi.patch.md  0004-export-axi-irqs-with-microvm-acpi.patch  0004-export-axi-irqs-with-microvm-acpi.patch.md  0004-export-virt-axi-irqs-with-microvm-acpi.patch  0004-export-virt-axi-irqs-with-microvm-acpi.patch.md
samples/: README.md  axi-a64.toml  axi-bus-a64.toml  axi-bus-x64.toml  axi-x64.toml  virt-axi-a64.toml  virt-axi-x64.toml
scripts/: build-blkd.sh  build-cond.sh  build-qemu-arm64.sh  build-qemu-x64.sh  build-qemu.sh  build-qemu.sh.md  build-tools.sh  build-tools.sh.md  chiplets-launcher.py  chiplets-launcher.py.md  chiplets-uio-x64.py  run-vhost-blk.sh  with-nix.sh
src/: lib.rs  mmio_proxy.rs  virtio-mmio.c  virtio-mmio.h  virtio-mmio.md  virtio.c  virtio.h  virtio.md
src/drivers/: virtio-blkd.c  virtio-blkd.h  virtio-blkd.md  virtio-consoled.c  virtio-consoled.h  virtio-consoled.md
src/fabrics/: axi.c  axi.md  devmem.c  devmem.md  fabric.h  fabric.md  linux_devmem.md  linux_uio.c  linux_uio.md  qemu_socket.md  uio.c  virt-axi.c  virt-axi.h  virt-axi.md
src/kernel/: axi_mmio.c  axi_mmio.md  chiplets_uio.c  chiplets_uio.md
src/tools/: uio-membench.c
tests/: c-backend-tests.c  c-backend-tests.c.md  c-backend-tests.md  run-benchmark-a64.sh  run-benchmark.md  run-benchmark.sh  run-c-unit-tests.sh  run-c-unit-tests.sh.md  run-tests-a64-backend-x64-frontend.sh  run-tests-a64.sh  run-tests-x64-backend-a64-frontend.sh  run-tests.sh
